<resources>
    <string name="app_name">Chemistry</string>
    <string name="achbutt1">Достижение заблокировано</string>
    <string name="belem1">C</string>
    <string name="belem2">O2</string>
    <string name="belem3">Na</string>
    <string name="belem4">Cl2</string>
    <string name="belem5">H2</string>
    <string name="belem6">S</string>
    <string name="belem7">Mg</string>
    <string name="belem8">Al</string>
    <string name="belem9">Cu</string>
    <string name="belem10">Ca</string>
    <string name="belem11">Zn</string>
    <string name="belem12">Fe</string>
    <string name="baza">База элементов</string>
    <string name="lock">Locked</string>
    <string name="C">Углерод: Порядковый номер - 6, атомная масса - 12.0107</string>
    <string name="S">Сера: Порядковый номер - 16, атомная масса - 32.059</string>
    <string name="О2">Кислород: Порядковый номер - 8, атомная масса - 15.999</string>
    <string name="Na">Натрий: Порядковый номер - 11, атомная масса - 22.989</string>
    <string name="Cl">Хлор: Порядковый номер - 17, атомная масса - 35.446</string>
    <string name="H">Водород: Порядковый номер - 1, атомная масса - 1.008</string>
    <string name="Mg">Магний: Порядковый номер - 12, атомная масса - 24.305</string>
    <string name="Аl">Алюминий: Порядковый номер - 13, атомная масса - 26.982</string>
    <string name="Cu">Медь: Порядковый номер - 29, атомная масса - 63.546</string>
    <string name="Cа">Кальций: Порядковый номер - 20, атомная масса - 40.078</string>
    <string name="Zn">Цинк: Порядковый номер - 30, атомная масса - 65.38</string>
    <string name="Fe">Железо: Порядковый номер - 26, атомная масса - 55.845</string>
    <string name="H2O">Оксид водорода - прозрачная жидкость, не имеющая цвета, запаха и вкуса </string>
    <string name="SO2">Оксид серы (IV) - бесцветный газ с характерным резким запахом загорающейся спички</string>
    <string name="HCl">Хлороводород(Соляра) - бесцветный, термически устойчивый газ с резким запахом</string>
    <string name="MgO">Оксид магния - белые кристаллы, нерастворимые в воде, пожаро- и взрывобезопасен</string>
    <string name="CO2">Диоксид углерода (углекислый газ) - бесцветный газ без запаха</string>
    <string name="CuO">Оксид меди (II) - кристаллы чёрного цвета, практически нерастворимы в воде</string>
    <string name="Na2O2">Пероксид натрия - желтовато-белые кристаллы с ионной кристаллической решёткой</string>
    <string name="Na2O">Оксид натрия - неорганическое вещество, относится к классу основных оксидов</string>
    <string name="Na2S">Сульфид натрия - порошок белого цвета, плавится без разложения, термически устойчивый</string>
    <string name="CuCl2">Хлорид меди (II) - жёлто-бурые кристаллы, относятся к классу солей</string>
    <string name="FeCl">Хлорид железа (III) - мерцающие, чёрно-коричневые листочки с металлическим блеском, средняя соль</string>
    <string name="NaOH">Гидроксид натрия, самая распространённая щёлочь, "едкая щёлочь"</string>
    <string name="MgCl2">Хлорид магния - магниевая соль соляной кислоты</string>
    <string name="FeS">Сульфид железа (II) - бескислородная соль. Кристаллы чёрного цвета с металлическим блеском</string>
    <string name="H2CO3">Угольная кислота - слабая двухосновная кислота, образуется при растворении углекисого газа</string>
    <string name="ZnCl2">Хлорид цинка (хлористый цинк, паяльная кислота) - белые кристаллы </string>
    <string name="CaO">Оксид кальция - белое кристаллическое вещество, негашёная известь</string>
    <string name="Al2S3">Сульфид алюминия - бескислородная соль белого цвета, плавится без разложения, окисляется на воздухе при прокаливании</string>



</resources>
