<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/baza"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/button17"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button"
            android:text="@string/belem1"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button18"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/button17"
            android:backgroundTint="@color/button"
            android:text="@string/belem6"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button19"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button17"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/button17"
            android:backgroundTint="@color/button"
            android:text="@string/belem2"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/button20"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button17"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/button"
            android:text="@string/belem3"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button21"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button20"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/button17"
            android:backgroundTint="@color/button"
            android:text="@string/belem4"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button22"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button20"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/button"
            android:text="@string/belem5"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button23"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button22"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/button17"
            android:backgroundTint="@color/button"
            android:text="@string/belem7"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button24"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button22"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/button"
            android:text="@string/belem8"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button25"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button24"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/button17"
            android:backgroundTint="@color/button"
            android:text="@string/belem9"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button26"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button24"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/button"
            android:text="@string/belem10"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button27"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button26"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/button17"
            android:backgroundTint="@color/button"
            android:text="@string/belem11"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button28"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/button26"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/button"
            android:text="@string/belem12"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </GridLayout>


</ScrollView>